Correct some more spacing on the home page

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -64,6 +64,8 @@
   }
 
   .log-in-or-register {
+    margin-bottom: 16px;
+
     h4, p { margin-bottom: 24px }
   }
 }
